RESOLVED FIXED271368
Network process should be able to resolve its own registered mDNS names
https://bugs.webkit.org/show_bug.cgi?id=271368
Summary Network process should be able to resolve its own registered mDNS names
youenn fablet
Reported 2024-03-21 02:19:26 PDT
Network process should be able to resolve its own registered mDNS names
Attachments
youenn fablet
Comment 1 2024-03-21 02:19:50 PDT
youenn fablet
Comment 2 2024-03-21 02:48:33 PDT
EWS
Comment 3 2024-03-22 11:00:37 PDT
Committed 276556@main (8ceefda7940b): <https://commits.webkit.org/276556@main> Reviewed commits have been landed. Closing PR #26234 and removing active labels.
Diego Pino
Comment 4 2024-03-24 22:50:36 PDT
Compilation with LibWebRTC on Linux is failing after this change: https://build.webkit.org/#/builders/30/builds/8861 ``` [2063/2393] Linking CXX shared library lib/libwebkit2gtk-4.0.so.37.69.0 FAILED: lib/libwebkit2gtk-4.0.so.37.69.0 : && /usr/lib/ccache/g++-10 -fPIC -fdiagnostics-color=always -Wextra -Wall -pipe -fmax-errors=20 -Wno-odr -Wno-stringop-overflow -Wno-nonnull -Wno-array-bounds -Wno-expansion-to-defined -Wno-noexcept-type -Wno-uninitialized -Wno-psabi -Wno-misleading-indentation -Wno-maybe-uninitialized -Wundef -Wpointer-arith -Wmissing-format-attribute -Wformat-security -Wcast-align -Wno-tautological-compare -fno-strict-aliasing -fno-exceptions -fno-rtti -O3 -DNDEBUG -Wl,--no-undefined -L/home/buildbot/webkitgtk/nightly/GTK-Linux-64bit-Release-Packaging-Nightly-Ubuntu2004/build/WebKitBuild/DependenciesGTK/Root/lib -Wl,--disable-new-dtags -shared -Wl,-soname,libwebkit2gtk-4.0.so.37 -o lib/libwebkit2gtk-4.0.so.37.69.0 @CMakeFiles/WebKit.rsp && : Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-72468c22-14.cpp.o:UnifiedSource-72468c22-14.cpp:function WebKit::NetworkRTCProvider::createResolver(WTF::ObjectIdentifierGeneric<WebKit::LibWebRTCResolverIdentifierType, WTF::ObjectIdentifierThreadSafeAccessTraits>, WTF::String&&): error: undefined reference to 'WebKit::NetworkMDNSRegister::hasRegisteredName(WTF::String const&) const' collect2: error: ld returned 1 exit status ```
Note You need to log in before you can comment on or make changes to this bug.